Modificando Index y Creando SobreMi

--- a/sobreMi.html
+++ b/sobreMi.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./images/image.png" width="60x60" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -26,10 +26,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobreMi.html">Sobre Andy</a>
+                            <a class="nav-link active" href="#">Sobre Andy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#blog">Blog</a>
@@ -48,10 +48,7 @@
     <section class="container-fluid marginSection">
         <div class="row card cardMargin">
             <div class="row g-0">
-                <div class="col-xxl-4 col-md-5 col-sm-12">
-                    <img src="./images/image.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-xxl-8 col-md-7 col-sm-12">
+                <div class="col-xxl-5">
                     <div class="card-body">
                         <h5 class="card-title">Andy Rojas</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -59,63 +56,55 @@
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
+                <div class="col-xxl-4">
+                    <img src="./images/image.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-xxl-3 imagenMenor">
+                    <img src="./images/image.png" class="img-fluid rounded-start" alt="...">
+                </div>
             </div>
         </div>
     </section>
     <section class="container-fluid marginSection">
         <div class="row">
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
-                    <div class="card-body">
-                        <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
-                        <p class="card-text">Desde nuestras distintas áreas profesionales -asuntos públicos,
-                            comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple Impacto:
-                            cómo aportamos en lo social, ambiental y económico.</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
-                            class="btn btn-dark">Ir a la Nota</a>
-                    </div>
-                </div>
+            <div class="col-xxl-3 marginAuto">
+                <h4>Mis estudios</h4>
+                <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor voluptas beatae voluptas.
+                    Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in architecto et et fugit quia dicta.
+
+                    Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo odio
+                    minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit voluptates eos.
+                    In voluptatem vero.
+
+                    Autem cumque quae aspernatur ab sapiente ratione perspiciatis suscipit ipsa. Sunt qui quos iusto sit
+                    inventore assumenda. Quis ad aut nam enim non consequatur itaque ex. Eos autem cumque incidunt
+                    officia ut quam voluptatem.</p>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/nota2.jpg" class="card-img-top" alt="imgNota2">
-                    <div class="card-body">
-                        <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la comunidad
-                            profesional</h3>
-                        <p class="card-text">Como parte de los objetivos institucionales de trabajar “en cada etapa de
-                            la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus objetivos aún en
-                            cuarentena.</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
-                            class="btn btn-dark">Ir a la Nota</a>
-                    </div>
-                </div>
+            <div class="col-xxl-3 marginAuto">
+                <h4>Mi experiencia laboral</h4>
+                <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor voluptas beatae voluptas.
+                    Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in architecto et et fugit quia dicta.
+
+                    Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo odio
+                    minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit voluptates eos.
+                    In voluptatem vero.
+
+                    Autem cumque quae aspernatur ab sapiente ratione perspiciatis suscipit ipsa. Sunt qui quos iusto sit
+                    inventore assumenda. Quis ad aut nam enim non consequatur itaque ex. Eos autem cumque incidunt
+                    officia ut quam voluptatem.</p>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
-                    <div class="card-body">
-                        <h3>Charla 1</h3>
-                        <p class="card-text">Texto de la Charla 1</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
-                            class="btn btn-dark">Ir a la Nota</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/charla2.jpg" class="card-img-top" alt="imgCharla2">
-                    <div class="card-body">
-                        <h3>Charla 2</h3>
-                        <p class="card-text">Texto de la Charla 2</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
-                            class="btn btn-dark">Ir a la Nota</a>
-                    </div>
-                </div>
+            <div class="col-xxl-3 marginAuto">
+                <h4>Mis objetivos profesionales</h4>
+                <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor voluptas beatae voluptas.
+                    Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in architecto et et fugit quia dicta.
+
+                    Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo odio
+                    minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit voluptates eos.
+                    In voluptatem vero.
+
+                    Autem cumque quae aspernatur ab sapiente ratione perspiciatis suscipit ipsa. Sunt qui quos iusto sit
+                    inventore assumenda. Quis ad aut nam enim non consequatur itaque ex. Eos autem cumque incidunt
+                    officia ut quam voluptatem.</p>
             </div>
         </div>
     </section>
