--- a/sobreMi.html
+++ b/sobreMi.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./images/image.png" width="60x60" alt=""></a>
+                <a class="navbar-brand" href="/index.html"><img src="./images/image.png" width="60x60" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -26,19 +26,19 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Sobre Andy</a>
+                            <a class="nav-link active" aria-current="page" href="#">Sobre Andy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#blog">Blog</a>
+                            <a class="nav-link" href="/blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#servicios">Servicios</a>
+                            <a class="nav-link" href="/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contacto">Contacto</a>
+                            <a class="nav-link" href="/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -50,50 +50,71 @@
             <div class="row g-0">
                 <div class="col-xxl-5">
                     <div class="card-body">
-                        <h5 class="card-title">Andy Rojas</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h3 class="card-title">Hola, soy Andy Rojas</h3>
+                        <div class="card-text parrafosSobreMi">
+                            <p>
+                                Antes que nada, quería agradecerte que te des una vuelta por acá a leer un poco sobre mí
+                                y
+                                sobre la propuesta.
+                            </p>
+                            <p>
+                                Ahora sí, para empezar a conocernos, te cuento que nací en Quilmes, provincia de Buenos
+                                Aires. Soy licenciado en Relaciones Públicas por la USAL y, en 2020, finalicé el
+                                posgrado en
+                                Asuntos Corporativos de la UCA.
+                            </p>
+                            <p>
+                                Me apasionan los desafíos y poder colaborar con que las personas e instituciones logren
+                                sus
+                                objetivos, a través del trabajo colaborativo y la comunicación efectiva/afectiva.
+                                Me especializo en Asuntos Públicos y Comunicación Corporativa. Soy cofundador de la
+                                Comisión
+                                de Mandos Medios del <a href="https://rrpp.org.ar/">Consejo Profesional de Relaciones
+                                    Públicas</a> donde me desempeño como
+                                líder del pilar de relaciones con Gobierno.
+                            </p>
+                            <p>
+                                Siempre busco seguir desarrollándome profesionalmente, ampliando mis capacidades de
+                                liderazgo e innovación.
+                            </p>
+                        </div>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
-                <div class="col-xxl-4">
-                    <img src="./images/image.png" class="img-fluid rounded-start" alt="...">
+                <div class="col-xxl-3">
+                    <img src="./images/Foto grande.JPG" class="img-fluid rounded imgSobreMi" width="350"
+                        alt="AndyRojas">
                 </div>
-                <div class="col-xxl-3 imagenMenor">
-                    <img src="./images/image.png" class="img-fluid rounded-start" alt="...">
+                <div class="col-xxl-4 imagenMenor">
+                    <img src="./images/Foto Chica.jpg" class="img-fluid rounded imgSobreMi" alt="AndyRojas2">
                 </div>
             </div>
         </div>
     </section>
     <section class="container-fluid marginSection">
         <div class="row">
-            <div class="col-xxl-3 marginAuto">
+            <div class="col-xxl-3 marginAutoLR">
                 <h4>Mis estudios</h4>
-                <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor voluptas beatae voluptas.
-                    Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in architecto et et fugit quia dicta.
-
-                    Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo odio
-                    minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit voluptates eos.
-                    In voluptatem vero.
-
-                    Autem cumque quae aspernatur ab sapiente ratione perspiciatis suscipit ipsa. Sunt qui quos iusto sit
-                    inventore assumenda. Quis ad aut nam enim non consequatur itaque ex. Eos autem cumque incidunt
-                    officia ut quam voluptatem.</p>
+                <p>Como te contaba arriba, cuando me presentaba, soy licenciado en Relaciones Pública. Gracias a la
+                    pandemia (algo positivo había que encontrarle) y mi curiosidad constante, también me formé en
+                    Community Manager y Publicidad en CoderHouse y realicé el curso de Design Thinking brindado por la
+                    Universidad de Sydney.
+                    Continuara…
+                </p>
             </div>
-            <div class="col-xxl-3 marginAuto">
+            <div class="col-xxl-3 marginAutoLR">
                 <h4>Mi experiencia laboral</h4>
-                <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor voluptas beatae voluptas.
-                    Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in architecto et et fugit quia dicta.
-
-                    Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo odio
-                    minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit voluptates eos.
-                    In voluptatem vero.
-
-                    Autem cumque quae aspernatur ab sapiente ratione perspiciatis suscipit ipsa. Sunt qui quos iusto sit
-                    inventore assumenda. Quis ad aut nam enim non consequatur itaque ex. Eos autem cumque incidunt
-                    officia ut quam voluptatem.</p>
+                <p>Comencé en el sector público nacional, pasando por la Jefatura de Gabinete de Ministros, Senado de la
+                    Nación y nuevamente Jefatura.
+                    En el 2015, ya recibido de licenciado, me volqué al sector privado. Siempre en el área de asuntos
+                    públicos.
+                    Mis inicios fueron en la consultora Ketchum Argentina, como ejecutivo de cuentas. Luego de un año,
+                    di el paso al sector corporativo siendo analista en Farmacity.
+                    Actualmente, me encuentro en la multinacional alimenticia francesa, Danone como Responsable de
+                    asuntos públicos.
+                </p>
             </div>
-            <div class="col-xxl-3 marginAuto">
+            <div class="col-xxl-3 marginAutoLR">
                 <h4>Mis objetivos profesionales</h4>
                 <p>Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor voluptas beatae voluptas.
                     Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in architecto et et fugit quia dicta.
