Agregando contenido y modificaciones

--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,90 @@
         </nav>
     </header>
     <section class="container-fluid marginSection">
-
+        <div class="row">
+            <div class="col-xxl-6 col-md-12 col-sm-12">
+                <h1>Notas de Interés</h1>
+                <div class="row">
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
+                            <p class="card-text alignRightFecha"><small class="text-muted">25/11/2021</small></p>
+                            <div class="card-body">
+                                <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
+                                <p class="card-text">Desde nuestras distintas áreas profesionales -asuntos públicos,
+                                    comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple
+                                    Impacto:
+                                    cómo aportamos en lo social, ambiental y económico.</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/nota2.jpg" class="card-img-top" alt="imgNota2">
+                            <p class="card-text alignRightFecha"><small class="text-muted">25/11/2021</small></p>
+                            <div class="card-body">
+                                <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la
+                                    comunidad
+                                    profesional</h3>
+                                <p class="card-text">Como parte de los objetivos institucionales de trabajar “en cada
+                                    etapa
+                                    de
+                                    la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus objetivos
+                                    aún en
+                                    cuarentena.</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xxl-6 col-md-12 col-sm-12">
+                <h1>Charlas en Empresas</h1>
+                <div class="row">
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
+                            <p class="card-text alignRightFecha"><small class="text-muted">25/11/2021</small></p>
+                            <div class="card-body">
+                                <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
+                                <p class="card-text">Desde nuestras distintas áreas profesionales -asuntos públicos,
+                                    comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple
+                                    Impacto:
+                                    cómo aportamos en lo social, ambiental y económico.</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/nota2.jpg" class="card-img-top" alt="imgNota2">
+                            <p class="card-text alignRightFecha"><small class="text-muted">25/11/2021</small></p>
+                            <div class="card-body">
+                                <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la
+                                    comunidad
+                                    profesional</h3>
+                                <p class="card-text">Como parte de los objetivos institucionales de trabajar “en cada
+                                    etapa
+                                    de
+                                    la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus objetivos
+                                    aún en
+                                    cuarentena.</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer id="Footer" class="container-fluid justify-content-center">
         <div class="row marginAuto">
@@ -79,7 +162,7 @@
             <div class="col-xxl-3 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">Seguime en mis redes sociales</li>
+                    <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
                         <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
                                     alt=""></a></li>
