--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,7 @@
                     <input type="email" name="_replyto" id="email-address" placeholder="example@email.com" require />
                     <label htmlFor="telephone">Teléfono (Opcional)</label>
                     <input type="number" name="telephone" id="telephone" placeholder="11 1234-5678" />
-                    <label htmlFor="message">Déjanos tu Mensaje</label>
+                    <label htmlFor="message">Dejanos tu Mensaje / Consulta</label>
                     <textarea rows="5" name="message" id="message"
                         placeholder="Escriba lo que desee consultar o solicitar" required></textarea>
                     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission" />
@@ -97,7 +97,7 @@
             <div class="col-xxl-3 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">Seguime en mis redes sociales</li>
+                    <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
                         <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
                                     alt=""></a></li>
