--- a/index.html
+++ b/index.html
@@ -63,56 +63,70 @@
     </section>
     <section class="container-fluid marginSection">
         <div class="row">
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
-                    <div class="card-body">
-                        <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
-                        <p class="card-text">Desde nuestras distintas áreas profesionales -asuntos públicos,
-                            comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple Impacto:
-                            cómo aportamos en lo social, ambiental y económico.</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
-                            class="btn btn-dark">Ir a la Nota</a>
+            <div class="col-xxl-6 col-md-12 col-sm-12">
+                <div class="row">
+                    <h1>Últimas Notas</h1>
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
+                            <div class="card-body">
+                                <h3>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
+                                <p class="card-text">Desde nuestras distintas áreas profesionales -asuntos públicos,
+                                    comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple
+                                    Impacto:
+                                    cómo aportamos en lo social, ambiental y económico.</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/nota2.jpg" class="card-img-top" alt="imgNota2">
+                            <div class="card-body">
+                                <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la
+                                    comunidad
+                                    profesional</h3>
+                                <p class="card-text">Como parte de los objetivos institucionales de trabajar “en cada
+                                    etapa de
+                                    la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus objetivos
+                                    aún en
+                                    cuarentena.</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/nota2.jpg" class="card-img-top" alt="imgNota2">
-                    <div class="card-body">
-                        <h3>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la comunidad
-                            profesional</h3>
-                        <p class="card-text">Como parte de los objetivos institucionales de trabajar “en cada etapa de
-                            la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus objetivos aún en
-                            cuarentena.</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
-                            class="btn btn-dark">Ir a la Nota</a>
+            <div class="col-xxl-6 col-md-12 col-sm-12">
+                <div class="row">
+                    <h1>Últimas Charlas</h1>
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
+                            <div class="card-body">
+                                <h3>Charla 1</h3>
+                                <p class="card-text">Texto de la Charla 1</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
-                    <div class="card-body">
-                        <h3>Charla 1</h3>
-                        <p class="card-text">Texto de la Charla 1</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
-                            class="btn btn-dark">Ir a la Nota</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/charla2.jpg" class="card-img-top" alt="imgCharla2">
-                    <div class="card-body">
-                        <h3>Charla 2</h3>
-                        <p class="card-text">Texto de la Charla 2</p>
-                        <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
-                        <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
-                            class="btn btn-dark">Ir a la Nota</a>
+                    <div class="col-xxl-6 col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/charla2.jpg" class="card-img-top" alt="imgCharla2">
+                            <div class="card-body">
+                                <h3>Charla 2</h3>
+                                <p class="card-text">Texto de la Charla 2</p>
+                                <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
+                                <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
+                                    class="btn btn-dark">Ir a la Nota</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -149,7 +163,7 @@
             <div class="col-xxl-3 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">Seguime en mis redes sociales</li>
+                    <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
                         <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
                                     alt=""></a></li>
