--- a/servicios.html
+++ b/servicios.html
@@ -46,7 +46,61 @@
         </nav>
     </header>
     <section class="container-fluid marginSection">
+        <div class="row">
+            <h1>¿En qué puedo ayudarte?</h1>
+            <div class="col-xxl-5 col-md-12 col-xs-12 marginAutoLR">
+                <div class="card">
+                    <h3 class="card-title tituloServicios">Asesoramiento profesional</h3>
+                    <img src="/images/image.png" class="img-fluid rounded imagenServicios" alt="...">
+                    <div class="card-body">
+                        <div class="btnServicios">
+                            <a href="#" class="btn btn-dark">Solicitá tu asesoramiento</a>
+                        </div>
+                        <p class="card-text">Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor
+                            voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in
+                            architecto et et fugit quia dicta.
 
+                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
+                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
+                            voluptates eos. In voluptatem vero.
+
+                            Autem cumque quae aspernatur ab sapiente ratione
+
+                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
+                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
+                            voluptates eos. In voluptatem vero.
+
+                            Autem cumque quae aspernatur ab sapiente ratione </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xxl-5 col-md-12 col-xs-12 marginAutoLR">
+                <div class="card">
+                    <h3 class="card-title tituloServicios">Capacitaciones para empresas y emprendimientos</h3>
+                    <img src="/images/image.png" class="img-fluid rounded imagenServicios" alt="...">
+                    <div class="card-body">
+                        <div class="btnServicios">
+                            <a href="#" class="btn btn-dark">Solicitá tu asesoramiento</a>
+                        </div>
+                        <p class="card-text">Vitae veniam ab et eos voluptas. Omnis ipsum delectus et rerum fuga dolor
+                            voluptas beatae voluptas. Voluptates aspernatur est blanditiis qui qui. Sunt enim fugiat in
+                            architecto et et fugit quia dicta.
+
+                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
+                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
+                            voluptates eos. In voluptatem vero.
+
+                            Autem cumque quae aspernatur ab sapiente ratione
+
+                            Sapiente voluptas sunt. Non molestiae repudiandae molestias in expedita dicta. Ut explicabo
+                            odio minima in rem quas et ea. Illum beatae ipsam tenetur amet aliquid. Qui dolore in sit
+                            voluptates eos. In voluptatem vero.
+
+                            Autem cumque quae aspernatur ab sapiente ratione </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer id="Footer" class="container-fluid justify-content-center">
         <div class="row marginAuto">
@@ -79,7 +133,7 @@
             <div class="col-xxl-3 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">Seguime en mis redes sociales</li>
+                    <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
                         <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
                                     alt=""></a></li>
