--- a/sobreMi.html
+++ b/sobreMi.html
@@ -78,7 +78,6 @@
                                 liderazgo e innovación.
                             </p>
                         </div>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
                 <div class="col-xxl-3">
@@ -160,7 +159,7 @@
             <div class="col-xxl-3 paddingLeft">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">Seguime en mis redes sociales</li>
+                    <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
                         <li><a class="link-dark" href="#"><img class="imagenesRRSS" src="./images/twitter_logo.png"
                                     alt=""></a></li>
