--- a/contacto.html
+++ b/contacto.html
@@ -46,11 +46,12 @@
         </nav>
     </header>
     <section class="container-fluid marginSection">
+        <h1 class="tituloSeccion">Conectemos</h1>
         <div id="containerContacto" class="col-xxl-4">
             <form id="fs-frm" name="simple-contact-form" acceptCharset="utf-8" action="https://formspree.io/f/xyylrjdo"
                 method="post">
                 <fieldset id="fs-frm-inputs">
-                    <h2 className="centrar">Contacto</h2>
+                    <h3 className="centrar">Dejame tus datos y me comunicaré con vos</h3>
                     <label htmlFor="full-name">Nombre y Apellido</label>
                     <input type="text" name="name" id="full-name" placeholder="Nombre y Apellido" required />
                     <label htmlFor="email-address">Email</label>
