--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <p class="card-text">Texto de la Charla 1</p>
                                 <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
-                                    class="btn btn-dark">Ir a la Nota</a>
+                                    class="btn btn-dark">Ir a la Charla</a>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                                 <p class="card-text">Texto de la Charla 2</p>
                                 <p class="autor"><span class="boldFont">Autor: </span>Andrés Rojas</p>
                                 <a href="https://www.linkedin.com/posts/andrés-rojas-88244b132_gracias-a-andrés-rojas-responsable-de-aapp-activity-6712505831142785024-v_Mw/"
-                                    class="btn btn-dark">Ir a la Nota</a>
+                                    class="btn btn-dark">Ir a la Charla</a>
                             </div>
                         </div>
                     </div>
