--- a/servicios.html
+++ b/servicios.html
@@ -47,7 +47,7 @@
     </header>
     <section class="container-fluid marginSection">
         <div class="row">
-            <h1>¿En qué puedo ayudarte?</h1>
+            <h1 class="tituloSeccion">¿En qué puedo ayudarte?</h1>
             <div class="col-xxl-5 col-md-12 col-xs-12 marginAutoLR">
                 <div class="card">
                     <h3 class="card-title tituloServicios">Asesoramiento profesional</h3>
