comprimiendo imagen Andres

--- a/sobreMi.html
+++ b/sobreMi.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="col-xxl-3">
-                    <img src="./images/Foto grande.JPG" class="img-fluid rounded imgSobreMi" width="350"
+                    <img src="./images/AndresRojas.jfif" class="img-fluid rounded imgSobreMi" width="350"
                         alt="AndyRojas">
                 </div>
                 <div class="col-xxl-4 imagenMenor">
